samples/_failures_safe/1761129344_ff5800_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9161bda8.c: In function ‘main’:
./samples/SAFE/__tmp_9161bda8.c:163:12: error: missing terminating " character
  163 |     printf("Graph has %d nodes and %d edges
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9161bda8.c:163:5: error: expected expression at end of input
  163 |     printf("Graph has %d nodes and %d edges
      |     ^~~~~~
./samples/SAFE/__tmp_9161bda8.c:163:5: error: expected declaration or statement at end of input
